--- a/layout/classic/index.html
+++ b/layout/classic/index.html
@@ -169,6 +169,74 @@
             <button class="all-courses-btn main-btn">All Courses</button>
           </div>
         </div>
+        <div class="cards">
+          <!-- Card 01 -->
+          <div class="card">
+            <div class="image" data-color="yellow">
+              <img src="./images/computer.png" alt="computer" />
+            </div>
+            <div class="text">
+              <h3>Become a Data Analysis Expert With Power BI</h3>
+            </div>
+            <div class="bottom">
+              <div class="stars">
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <span>(1.202)</span>
+              </div>
+              <a href="#" class="read-more-btn">
+                Read More <i class="fa-solid fa-arrow-right btn-icon"></i>
+              </a>
+            </div>
+          </div>
+          <!-- Card 02 -->
+          <div class="card">
+            <div class="image" data-color="blue">
+              <img src="./images/communication.png" alt="communication" />
+            </div>
+            <div class="text">
+              <h3>Improve Communication: Speak Smothly & Clearly</h3>
+            </div>
+            <div class="bottom">
+              <div class="stars">
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <span>(2.091)</span>
+              </div>
+              <a href="#" class="read-more-btn">
+                Read More <i class="fa-solid fa-arrow-right btn-icon"></i>
+              </a>
+            </div>
+          </div>
+          <!-- Card 03 -->
+          <div class="card">
+            <div class="image" data-color="pink">
+              <img src="./images/programmer.png" alt="programmer" />
+            </div>
+            <div class="text">
+              <h3>Understanding HIPAA for the Medical Office</h3>
+            </div>
+            <div class="bottom">
+              <div class="stars">
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <i class="fa-solid fa-star star-icon"></i>
+                <span>(3.132)</span>
+              </div>
+              <a href="#" class="read-more-btn">
+                Read More <i class="fa-solid fa-arrow-right btn-icon"></i>
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- End Popular Courses -->
