--- a/layout/classic/main.css
+++ b/layout/classic/main.css
@@ -623,6 +623,11 @@ body {
 .popular-courses {
   padding: var(--section-padding) 0;
 }
+@media (max-width: 991px) {
+  .popular-courses .container .header {
+    text-align: center;
+  }
+}
 .popular-courses .container .header h2 {
   margin-bottom: 1rem;
   font-size: 2rem;
@@ -640,6 +645,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+@media (max-width: 991px) {
+  .popular-courses .container .discreption {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 1rem;
+  }
 }
 .popular-courses .container .discreption p {
   max-width: 600px;
@@ -666,6 +679,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0 1rem;
 }
 .popular-courses .container .discreption .fillters .fillter .selected {
   background-color: #fff;
@@ -723,7 +737,6 @@ body {
 .popular-courses .container .discreption .fillters .fillter .selected {
   padding: 12px 30px 12px 26px;
   cursor: pointer;
-  margin: 0 1rem;
 }
 .popular-courses .container .discreption .fillters .fillter .option:hover {
   background-color: var(--green);
@@ -738,4 +751,90 @@ body {
   white-space: nowrap;
   background: -webkit-gradient(linear, left bottom, left top, from(#ff7858), to(#ffa893));
   background: linear-gradient(0deg, #ff7858, #ffa893);
+}
+.popular-courses .container .cards {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+  gap: 2.5rem;
+  padding: 2rem 0;
+}
+.popular-courses .container .cards .card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #fff;
+  border-radius: 20px;
+  -webkit-box-shadow: 2px 2px 10px 10px #00000009;
+          box-shadow: 2px 2px 10px 10px #00000009;
+  padding: 1rem;
+}
+.popular-courses .container .cards .card .image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  border-radius: 20px;
+}
+.popular-courses .container .cards .card .image img {
+  width: 200px;
+}
+.popular-courses .container .cards .card .image[data-color=yellow] {
+  background-color: var(--yellow);
+}
+.popular-courses .container .cards .card .image[data-color=blue] {
+  background-color: var(--blue);
+}
+.popular-courses .container .cards .card .image[data-color=pink] {
+  background-color: var(--pink);
+}
+.popular-courses .container .cards .card .text {
+  margin: 1rem 0;
+}
+.popular-courses .container .cards .card .text h3 {
+  line-height: 1.2;
+}
+.popular-courses .container .cards .card .bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+.popular-courses .container .cards .card .bottom .stars {
+  white-space: nowrap;
+}
+.popular-courses .container .cards .card .bottom .stars .star-icon {
+  font-size: 1rem;
+  color: var(--yellow);
+}
+.popular-courses .container .cards .card .bottom .stars span {
+  color: #b4b4b4;
+}
+.popular-courses .container .cards .card .bottom .read-more-btn {
+  text-decoration: none;
+  font-weight: 600;
+  color: var(--blue);
+  white-space: nowrap;
 }
