--- a/layout/classic/scss/pages/_index.scss
+++ b/layout/classic/scss/pages/_index.scss
@@ -437,6 +437,11 @@
   padding: var(--section-padding) 0;
   .container {
     .header {
+      @media (max-width: 991px) {
+        & {
+          text-align: center;
+        }
+      }
       h2 {
         margin-bottom: 1rem;
         font-size: 2rem;
@@ -449,6 +454,12 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
+      @media (max-width: 991px) {
+        & {
+          justify-content: center;
+          gap: 1rem;
+        }
+      }
       p {
         max-width: 600px;
       }
@@ -461,6 +472,7 @@
           display: flex;
           justify-content: center;
           align-items: center;
+          margin: 0 1rem;
           .selected {
             background-color: #fff;
             border-radius: 50px;
@@ -510,7 +522,6 @@
           .selected {
             padding: 12px 30px 12px 26px;
             cursor: pointer;
-            margin: 0 1rem;
           }
           & .option:hover {
             background-color: var(--green);
@@ -525,6 +536,69 @@
         .all-courses-btn {
           white-space: nowrap;
           background: linear-gradient(0deg, #ff7858, #ffa893);
+        }
+      }
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+      gap: 2.5rem;
+      padding: 2rem 0;
+      .card {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background-color: #fff;
+        border-radius: 20px;
+        box-shadow: 2px 2px 10px 10px #00000009;
+        padding: 1rem;
+        .image {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          border-radius: 20px;
+          img {
+            width: 200px;
+          }
+        }
+        .image[data-color="yellow"] {
+          background-color: var(--yellow);
+        }
+        .image[data-color="blue"] {
+          background-color: var(--blue);
+        }
+        .image[data-color="pink"] {
+          background-color: var(--pink);
+        }
+        .text {
+          margin: 1rem 0;
+          h3 {
+            line-height: 1.2;
+          }
+        }
+        .bottom {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          .stars {
+            white-space: nowrap;
+            .star-icon {
+              font-size: 1rem;
+              color: var(--yellow);
+            }
+            span {
+              color: #b4b4b4;
+            }
+          }
+          .read-more-btn {
+            text-decoration: none;
+            font-weight: 600;
+            color: var(--blue);
+            white-space: nowrap;
+          }
         }
       }
     }
